Added stats about renvenue
